# heap-alloc

./: CMakeLists.txt  README.md
examples/: main.c
include/: heap.h
src/: heap.c
